tests/lit/syntax/error_bad_call_num_params.silly
// RUN: cd %S
// RUN: %Not %ExeSilly -g error_bad_call_num_params.silly -o %t.exe 2>&1 | %FileCheck %s
// CHECK: error_bad_call_num_params.silly: In function ‘foo’:
// CHECK: error_bad_call_num_params.silly:17:5: error: Mismatched number of arguments to call of function bar.  Passing: 0, required: 1.
// CHECK:    17 |     CALL bar( );
// CHECK:       |     ^

MODULE;

FUNCTION bar ( INT16 w )
{
    RETURN;
};

FUNCTION foo ( ) : INT32
{
    CALL bar( );

    RETURN 42;
};
